# Graphical_Dictionary

./: CMakeLists.txt  README.md  meaning.txt  oxford.txt
src/: DictionaryEntry.h  Trie.cpp  Trie.h  UI.cpp  UI.h  main.cpp  meaning.txt  meanings.txt  oxford.txt  recent.txt  trie_program  words.txt
